<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"
    tools:context="gov.nasa.jpl.minimaltextapplication.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:text="@string/button_label_sending"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/editTextDestEid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDestEid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/button_label_destination_eid"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/editTextPayload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextPayload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/editText_label_payload"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestEid" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/button_label_send"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPayload" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:text="@string/button_label_administration"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/editTextSinkId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />

    <EditText
        android:id="@+id/editTextSinkId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/editText_label_sink_identifier"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubUnsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonSubUnsub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/button_label_open"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSinkId" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:text="@string/button_label_receiving"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/receivedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubUnsub" />


    <ScrollView
        android:id="@+id/receivedScrollView"
        android:layout_width="340dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="477dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
            android:text="@string/received_field_initial_value"/>

    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="344dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Prompt_Num_Payload"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberSigned7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivedScrollView" />

    <EditText
        android:id="@+id/editTextNumberSigned7"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</android.support.constraint.ConstraintLayout>